2004-04-10  Andreas Buening  <andreas.buening@nexgo.de>

	* aclocal.in, automake.in, configure.ac, Makefile.am,
	tests/aclocal.in, tests/automake.in, tests/defs.in:
	Use PATH_SEPARATOR from autoconf instead of ':'.

2004-04-09  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (handle_lib_objects): Pass the condition of
	the variable definition to handle_LIBOBJS and handle_ALLOCA,
	not the aggregated conditions.
	* tests/Makefile.am (TESTS): Add libobj14.test.
	* tests/libobj14.test: New file.
	Report from Bill Davidson.

2004-04-02  Mike Nolta  <mike@nolta.net>

	Better support for Fortran 9x.
	* automake.in: Add "fc" and "ppfc" languages for Fortran 9x.
	* doc/automake.texi (Fortran 9x Support): New section.
	* lib/Automake/Variable.pm (%_ac_macro_for_var): Add AC_PROG_FC.
	* tests/compile_f90_c_cxx.test: New file.
	* tests/ext.test: Add AC_PROG_FC.
	* tests/f90only.test: New file.
	* tests/link_f90_only.test: New file.
	* tests/Makefile.am (TESTS): Add new tests.

2004-04-01  Paul Eggert  <eggert@twinsun.com>

	* lib/install-sh: If "mv -f" works, use it, and fall back to
	the old "test -f" + "rm -f" + "mv" method only if "mv -f" does
	not work.  This improves performance in the usual case where
	"mv -f" works.  It also lets us install the "mv" command
	without worrying about a small window where "mv" does not
	exist (this problem was reported by Raul Nunez de Arenas
	Coronado).

2004-03-26  Alexandre Duret-Lutz  <adl@gnu.org>

	* m4/python.m4 (AM_PATH_PYTHON): Make sure am_display_PYTHON is
	set when $PYTHON has been set by the user.
	From Esben Haabendal Soerensen.

2004-03-22  Alexandre Duret-Lutz  <adl@gnu.org>

	* doc/automake.texi (Default _SOURCES): Typo.
	(true): Correct _'s placement in example.
	Report from Stepan Kasal.

2004-03-19  Alexandre Duret-Lutz  <adl@gnu.org>

	Overriding JAVAROOT is legitimate, do not warn about it.
	* lib/Automake/Variable.pm (%_silent_variable_override): Add JAVAROOT.