@@ -195,6 +195,7 @@ Peter Eisentraut	peter_e@gmx.net
 Peter Gavin		pgavin@debaser.kicks-ass.org
 Peter Mattis		petm@scam.XCF.Berkeley.EDU
 Peter Muir		iyhi@yahoo.com
+Peter Seiderer		seiderer123@ciselant.de
 Petter Reinholdtsen	pere@hungry.com
 Phil Edwards		phil@jaj.com
 Phil Nelson		phil@cs.wwu.edu
