@@ -1,3 +1,10 @@
+2004-04-12  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	Fix for PR automake/416:
+	* m4/depend.m4 (_AM_DEPENDENCIES): Catch `not supported' ICC 8.0
+	remarks.
+	From Peter Seiderer.
+
 2004-04-10  Andreas Buening  <andreas.buening@nexgo.de>
 
 	* aclocal.in, automake.in, configure.ac, Makefile.am,
